--- a/index.html
+++ b/index.html
@@ -405,6 +405,26 @@
                     </li>
     </ul>
 </div>
+
+<form class="footer-contact-form">
+    <p class="footer-form-text">Subscribe</p>
+    <span class="footer-form-container">
+    <label class="footer-form-field">
+        <input 
+        type="email" 
+        name="user_email" 
+        class="footer-form-input" 
+        pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$]"
+        placeholder="E-mail">
+    </label>
+    <button type="subscribe" class="footer-form-subscribe">Subscribe
+        <svg class="footer-form-icon" width="24" height="20">
+            <use href="./images/icon.svg#icon-icon-send"></use>
+        </svg>
+    </button>
+</span>
+</form>
+
 </div>
     </footer>
 
@@ -415,6 +435,71 @@
                 <use href="./images/icon.svg#icon-Vector"></use>
             </svg>
         </button>
+
+    <form class="modal-form">
+        <p class="modal-text">Leave your contacts and we will call you back</p>
+        <div class="modal-form-container">
+        <label class="modal-form-field">
+            <span class="modal-form-text">Name</span>
+            <span class="modal-form-wrapper">
+            <input 
+            type="text" 
+            name="user_name" 
+            class="modal-form-input" 
+            required 
+            pattern="[a-zA-Z]+"
+            minlength="2">
+            <svg class="modal-form-icon" width="18" height="18">
+                <use href="/images/icon.svg#icon-person"></use>
+            </svg>
+            </span>
+           </>
+        </label>
+        <label class="modal-form-field">
+            <span class="modal-form-text">Phone</span>
+            <span class="modal-form-wrapper">
+            <input 
+            type="tel" 
+            name="user_phone" 
+            class="modal-form-input" 
+            required
+            pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
+            title="xxx-xxx-xx-xx">
+            <svg class="modal-form-icon" width="18" height="18">
+                <use href="/images/icon.svg#icon-icon-phone"></use>
+            </svg>
+        </span>
+        </label>
+        <label class="modal-form-field">
+            <span class="modal-form-text">Email</span>
+            <span class="modal-form-wrapper">
+            <input 
+            type="email" 
+            name="user_email" 
+            class="modal-form-input" 
+            required
+            pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$]">
+            <svg class="modal-form-icon" width="18" height="18">
+                <use href="/images/icon.svg#icon-icon-mail"></use>
+            </svg>
+        </span>
+        </label>
+        <label class="modal-form-field">
+            <span class="modal-form-text">Comment</span>
+            <textarea name="user_message"  
+            class="modal-form-msg" 
+            placeholder="Text input">
+        </textarea>
+        </label>
+    </div>
+    <div class="modal-form-container">
+        <input id="user-policy" type="checkbox" name="user_policy" class="modal-form-check" required>
+        <label for="user-policy" class="modal-form-check-desc">
+      I accept the terms and conditions of the <span class="modal-form-privacy"><a href="">Privacy Policy</a></span>
+        </label>
+    </div>
+        <button type="submit" class="modal-form-submit">Send</button>
+    </form>
     </div>
 </div>
 
