--- a/index.html
+++ b/index.html
@@ -408,21 +408,14 @@
 
 <form class="footer-contact-form">
     <p class="footer-form-text">Subscribe</p>
-    <span class="footer-form-container">
-    <label class="footer-form-field">
-        <input 
-        type="email" 
-        name="user_email" 
-        class="footer-form-input" 
-        pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$]"
-        placeholder="E-mail">
-    </label>
-    <button type="subscribe" class="footer-form-subscribe">Subscribe
+    <div class="footer-form-container">
+    <label class="footer-form-field"><input type="email" name="user_email" class="footer-form-input" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$]" placeholder="E-mail"></label>
+    <button type="submit" class="footer-form-subscribe">Subscribe
         <svg class="footer-form-icon" width="24" height="20">
             <use href="./images/icon.svg#icon-icon-send"></use>
         </svg>
     </button>
-</span>
+</div>
 </form>
 
 </div>
@@ -453,7 +446,6 @@
                 <use href="/images/icon.svg#icon-person"></use>
             </svg>
             </span>
-           </>
         </label>
         <label class="modal-form-field">
             <span class="modal-form-text">Phone</span>
@@ -484,13 +476,7 @@
             </svg>
         </span>
         </label>
-        <label class="modal-form-field">
-            <span class="modal-form-text">Comment</span>
-            <textarea name="user_message"  
-            class="modal-form-msg" 
-            placeholder="Text input">
-        </textarea>
-        </label>
+        <label class="modal-form-field"><span class="modal-form-text">Comment</span><textarea name="user_message" class="modal-form-msg" placeholder="Text input"></textarea></label>
     </div>
     <div class="modal-form-container">
         <input id="user-policy" type="checkbox" name="user_policy" class="modal-form-check" required>
