--- a/portfolio.html
+++ b/portfolio.html
@@ -233,6 +233,19 @@
                     </li>
     </ul>
 </div>
+
+<form class="footer-contact-form">
+    <p class="footer-form-text">Subscribe</p>
+    <div class="footer-form-container">
+    <label class="footer-form-field"><input type="email" name="user_email" class="footer-form-input" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$]" placeholder="E-mail"></label>
+    <button type="submit" class="footer-form-subscribe">Subscribe
+        <svg class="footer-form-icon" width="24" height="20">
+            <use href="./images/icon.svg#icon-icon-send"></use>
+        </svg>
+    </button>
+</div>
+</form>
+
 </div>
     </footer>
 
