--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
             pattern="[a-zA-Z]+"
             minlength="2">
             <svg class="modal-form-icon" width="18" height="18">
-                <use href="/images/icon.svg#icon-person"></use>
+                <use href="./images/icon.svg#icon-person"></use>
             </svg>
             </span>
         </label>
@@ -459,7 +459,7 @@
             pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
             title="xxx-xxx-xx-xx">
             <svg class="modal-form-icon" width="18" height="18">
-                <use href="/images/icon.svg#icon-icon-phone"></use>
+                <use href="./images/icon.svg#icon-icon-phone"></use>
             </svg>
         </span>
         </label>
@@ -473,7 +473,7 @@
             required
             pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$]">
             <svg class="modal-form-icon" width="18" height="18">
-                <use href="/images/icon.svg#icon-icon-mail"></use>
+                <use href="./images/icon.svg#icon-icon-mail"></use>
             </svg>
         </span>
         </label>
