--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
             </svg>
         </span>
         </label>
-        <label class="modal-form-field"><span class="modal-form-text">Comment</span><textarea name="user_message" class="modal-form-msg" placeholder="Text input"></textarea></label></label>
+        <label class="modal-form-field"><span class="modal-form-text">Comment</span><textarea name="user_message" class="modal-form-msg" placeholder="Text input"></textarea></label>
        <label class="modal-checkbox-label">
         <input id="user-policy" type="checkbox" name="user_policy" value="accept" class="modal-form-check visually hidden" required>
             <svg class="modal-checkbox-svg" width="10" height="8">
