--- a/index.html
+++ b/index.html
@@ -458,8 +458,8 @@
             required
             pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
             title="xxx-xxx-xx-xx">
-            <svg class="modal-form-icon" width="18" height="18">
-                <use href="./images/icon.svg#icon-icon-phone"></use>
+            <svg class="modal-form-icon" width="18" height="24">
+                <use href="./images/icon.svg#icon-phone"></use>
             </svg>
         </span>
         </label>
@@ -472,17 +472,19 @@
             class="modal-form-input" 
             required
             pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$]">
-            <svg class="modal-form-icon" width="18" height="18">
-                <use href="./images/icon.svg#icon-icon-mail"></use>
+            <svg class="modal-form-icon" width="18" height="24">
+                <use href="./images/icon.svg#icon-mail"></use>
             </svg>
         </span>
         </label>
         <label class="modal-form-field"><span class="modal-form-text">Comment</span><textarea name="user_message" class="modal-form-msg" placeholder="Text input"></textarea></label>
        <label class="modal-checkbox-label">
+        <span class="modal-checkbox-wrapper">
         <input id="user-policy" type="checkbox" name="user_policy" value="accept" class="modal-form-check visually hidden" required>
             <svg class="modal-checkbox-svg" width="10" height="8">
                 <use href="./images/icon.svg#icon-checkbox"></use>
             </svg>
+        </span>
        <span class="modal-form-check-desc">I accept the terms and conditions of the <a href="" class="modal-form-privacy">Privacy Policy</a></span>
     </label>
         <button type="submit" class="modal-form-submit">Send</button>
